# school-calendar

./: .gitignore  README.md  pyproject.toml
school_cal/: __init__.py  config.py  main.py  models.py  storage.py
school_cal/static/: app-20260629-mobile-4.js  app.js  index.html  styles-20260629-mobile-3.css  styles-20260629-mobile-4.css  styles.css
tests/: test_api.py
